--- a/index.html
+++ b/index.html
@@ -35,47 +35,87 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
+        <form>
+            <div>
+              <label for="location">Location</label>
+              <input id="name" type="text" name="location" placeholder="Search destination"/>
+            </div>
+            <div>
+              <label for="arrive">Arrive</label>
+              <input id="arrive" type="date" name="arrive"/>
+            </div>
+            <div>
+              <label for="depart">Depart</label>
+              <input id="depart" type="date" name="depart"/>
+            </div>
+            <div>
+              <label for="type">Type</label>
+              <select name="types" id="types" size="1">
+                <option value="apartments">Apartments</option>
+                <option value="bed and breakfast">Bed and Breakfast</option>
+                <option value="house">House</option>
+              </select>
+            </div>
+            <div>
+              <button type="submit">Search</button>
+            </div>
+        </form>
       </section>
 
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
+        <div class="about-group">
+          <div class="item">
+            <img
+              src="images/vacation-rental-pool.png"
+              alt="Thinkfulbnb - Vacation rental pool"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="images/vacation-rental-inside-stone.png"
+              alt="Thinkfulbnb - Vacation rental inside stone"
+            />
+          </div>
 
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
-        />
-
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
-        />
-
-        <p>
+        <p class="text-right">
           Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
           fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
           porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
           neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
           gravida neque.
         </p>
+      </div>
       </section>
 
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
-        <img
-          src="images/forest-retreat.png"
-          alt="Thinkfulbnb - Forest retreat"
-        />
-        <h3>Beaches</h3>
-        <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+        
+        <div class="stay-group">
+          <div class="item-double">
+            <h3>Forest retreats</h3>
+            <img
+              src="images/forest-retreat.png"
+              alt="Thinkfulbnb - Forest retreat"
+            />
+          </div>
+            <div class="item-double">
+              <h3>Beaches</h3>
+              <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+            </div> 
+          <div class="item-double">
+            <h3>Rustic cabins</h3>
+            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+          </div>
+          <div class="item-double">
+            <h3>Pet-friendly</h3>
+            <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+          </div>
+        </div>  
 
-        <h3>Rustic cabins</h3>
-        <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
 
-        <h3>Pet-friendly</h3>
-        <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
       </section>
 
       <!-- Host -->
