minor changes, no success on images

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
           </div>
             <div class="item-double">
               <h3>Beaches</h3>
-              <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+              <img
+               src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
             </div> 
           <div class="item-double">
             <h3>Rustic cabins</h3>
