--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
         <form>
-            <div>
+            <div class="wrapper">
               <label for="location">Location</label>
               <input id="name" type="text" name="location" placeholder="Search destination"/>
             </div>
-            <div>
+            <div class="wrapper">
               <label for="arrive">Arrive</label>
               <input id="arrive" type="date" name="arrive"/>
             </div>
-            <div>
+            <div class="wrapper">
               <label for="depart">Depart</label>
               <input id="depart" type="date" name="depart"/>
             </div>
-            <div>
+            <div class="wrapper">
               <label for="type">Type</label>
               <select name="types" id="types" size="1">
                 <option value="apartments">Apartments</option>
@@ -56,7 +56,7 @@
                 <option value="house">House</option>
               </select>
             </div>
-            <div>
+            <div class="wrapper">
               <button type="submit">Search</button>
             </div>
         </form>
@@ -94,23 +94,23 @@
         <h2>Ideas</h2>
         
         <div class="stay-group">
-          <div class="item-double">
+          <div class="item-ideas">
             <h3>Forest retreats</h3>
             <img
               src="images/forest-retreat.png"
               alt="Thinkfulbnb - Forest retreat"
             />
           </div>
-            <div class="item-double">
+            <div class="item-ideas">
               <h3>Beaches</h3>
               <img
                src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
             </div> 
-          <div class="item-double">
+          <div class="item-ideas">
             <h3>Rustic cabins</h3>
             <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
           </div>
-          <div class="item-double">
+          <div class="item-ideas">
             <h3>Pet-friendly</h3>
             <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
           </div>
@@ -121,26 +121,29 @@
 
       <!-- Host -->
       <section id="host" class="alternate-background">
-        <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
-          molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
-          Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
-          pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
-          libero rutrum vitae.
-        </p>
-        <ul>
-          <li>Mauris in pellentesque ligula.</li>
-          <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
-          <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
-          <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
-          <li>
-            Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
-            hendrerit mauris.
-          </li>
-        </ul>
-
-        <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+        <div class="host">
+          <div class="host-text">
+            <h2>Want to Become a Thinkfulbnb Host?</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
+              molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
+              Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
+              pellentesque eros in aliquet. Sed accumsan elit lacus, id ultrices
+              libero rutrum vitae.
+            </p>
+            <ul>
+              <li>Mauris in pellentesque ligula.</li>
+              <li>Sed accumsan elit lacus, id ultrices libero rutrum vitae.</li>
+              <li>Nunc vitae ex eget neque pellentesque porttitor.</li>
+              <li>Cras mollis lorem sagittis sapien imperdiet blandit. Vivamus.</li>
+              <li>
+                Donec vehicula ipsum nisi, eu consectetur leo feugiat et. Fusce eget
+                hendrerit mauris.
+              </li>
+            </ul>
+          </div>
+            <img class="host-image" src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+          </div>
       </section>
     </main>
 
