updated final submission

--- a/index.html
+++ b/index.html
@@ -42,18 +42,22 @@
             </div>
             <div class="wrapper">
               <label for="arrive">Arrive</label>
-              <input id="arrive" type="date" name="arrive"/>
+              <input id="arrive" type="data" name="arrive"/>
             </div>
             <div class="wrapper">
               <label for="depart">Depart</label>
-              <input id="depart" type="date" name="depart"/>
+              <input id="depart" type="data" name="depart"/>
             </div>
             <div class="wrapper">
               <label for="type">Type</label>
-              <select name="types" id="types" size="1">
-                <option value="apartments">Apartments</option>
-                <option value="bed and breakfast">Bed and Breakfast</option>
-                <option value="house">House</option>
+              <select class="select" name="types" id="types" size="1">
+                <option value="apartments">Apartment</option>
+                <option value="barn">Barn</option>
+                <option value="castle">Castle</option>
+                <option value="house boat">House Boat</option>
+                <option value="tiny house">Tiny House</option>
+                <option value="yacht">Yacht</option>
+                <option value="yurt">Yurt</option>
               </select>
             </div>
             <div class="wrapper">
