--- a/index.html
+++ b/index.html
@@ -98,21 +98,22 @@
             <h3>Forest retreats</h3>
             <img
               src="images/forest-retreat.png"
-              alt="Thinkfulbnb - Forest retreat"
+              alt="Thinkfulbnb - Forest retreat" 
+              class="item-pictures"
             />
           </div>
             <div class="item-ideas">
               <h3>Beaches</h3>
               <img
-               src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
+               src="images/beach-house.png" alt="Thinkfulbnb - Beach house" class="item-pictures"/>
             </div> 
           <div class="item-ideas">
             <h3>Rustic cabins</h3>
-            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
+            <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" class="item-pictures" />
           </div>
           <div class="item-ideas">
             <h3>Pet-friendly</h3>
-            <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+            <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" class="item-pictures" />
           </div>
         </div>  
 
